force-app/main/default/objects/Task_Dependency__c/Task_Dependency__c.object-meta.xml
<CustomObject>
    <description>Defines dependencies between tasks to manage task sequencing and blocking</description>
    <label>Task Dependency</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>