force-app/main/default/objects/Task_Dependency__c/fields/Is_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Is_Blocking__c</fullName>
    <description>Formula: TRUE if predecessor task is incomplete and blocking successor</description>
    <label>Is Blocking</label>
    <formula>ISPICKVAL(Predecessor_Task__r.Status__c, "Completed") = FALSE</formula>
    <type>Checkbox</type>
</CustomField>