force-app/main/default/objects/Task_Dependency__c/fields/Predecessor_Task__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Task that must be completed first</description>
    <label>Predecessor Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Dependent Tasks</relationshipLabel>
    <relationshipName>Dependent_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>