force-app/main/default/objects/Task_Dependency__c/fields/Successor_Task__c.field-meta.xml
<CustomField>
    <fullName>Successor_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Task that depends on the predecessor</description>
    <label>Successor Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Predecessor Tasks</relationshipLabel>
    <relationshipName>Predecessor_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>