force-app/main/default/objects/Task_Dependency__c/validationRules/Cannot_Depend_On_Self.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Depend_On_Self</fullName>
    <active>true</active>
    <description>Prevents creating circular dependency where task depends on itself</description>
    <errorConditionFormula>Predecessor_Task__c = Successor_Task__c</errorConditionFormula>
    <errorMessage>A task cannot depend on itself. Please select a different predecessor task.</errorMessage>
</ValidationRule>